source/Antlr/.antlr/ReCParser.java
// Generated from c:/Users/rafaed/Desktop/Programming/rec/source/Antlr/ReC.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, Whitespace=14, SLComment=15, MLComment=16, 
		Var=17, Let=18, End=19, If=20, Else=21, While=22, Fn=23, Continue=24, 
		Break=25, Defer=26, Type=27, Struct=28, Template=29, New=30, Return=31, 
		For=32, Mod=33, Use=34, Auto=35, And=36, Not=37, Or=38, True=39, False=40, 
		Uninit=41, As=42, Identifier=43, Integer=44, Float=45, String=46, Plus=47, 
		Minus=48, Star=49, Slash=50, Ampersand=51, Equal=52, CompEqual=53, OpenParen=54, 
		CloseParen=55, OpenBrace=56, CloseBrace=57, OpenIndex=58, CloseIndex=59;
	public static final int
		RULE_program = 0, RULE_topLevelStatement = 1, RULE_asStatement = 2, RULE_modStatement = 3, 
		RULE_useStatement = 4, RULE_templateHeader = 5, RULE_structFieldDefine = 6, 
		RULE_structDefine = 7, RULE_fnArgumentDefine = 8, RULE_fnDefine = 9, RULE_aliasDefine = 10, 
		RULE_block = 11, RULE_statement = 12, RULE_returnStmt = 13, RULE_deferStmt = 14, 
		RULE_ifStmt = 15, RULE_ifTail = 16, RULE_whileStmt = 17, RULE_assignStmt = 18, 
		RULE_letExpr = 19, RULE_letStmt = 20, RULE_typenameFnArgs = 21, RULE_typename = 22, 
		RULE_expr = 23, RULE_opExpr = 24, RULE_explicitTemplateInstatiation = 25, 
		RULE_callExpr = 26, RULE_structExpr = 27, RULE_structExprAssign = 28, 
		RULE_dotComponent = 29, RULE_dotExpr = 30, RULE_termExpr = 31, RULE_literal = 32, 
		RULE_boolLiteral = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevelStatement", "asStatement", "modStatement", "useStatement", 
			"templateHeader", "structFieldDefine", "structDefine", "fnArgumentDefine", 
			"fnDefine", "aliasDefine", "block", "statement", "returnStmt", "deferStmt", 
			"ifStmt", "ifTail", "whileStmt", "assignStmt", "letExpr", "letStmt", 
			"typenameFnArgs", "typename", "expr", "opExpr", "explicitTemplateInstatiation", 
			"callExpr", "structExpr", "structExprAssign", "dotComponent", "dotExpr", 
			"termExpr", "literal", "boolLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','", "';'", "'!='", "'>'", "'<'", "'<='", "'>='", "'|'", 
			"'>>'", "'<<'", "'~'", "'''", null, null, null, "'var'", "'let'", "'end'", 
			"'if'", "'else'", "'while'", "'fn'", "'continue'", "'break'", "'defer'", 
			"'type'", "'struct'", "'template'", "'new'", "'return'", "'for'", "'mod'", 
			"'use'", "'auto'", "'and'", "'not'", "'or'", "'true'", "'false'", "'uninit'", 
			"'as'", null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'&'", "'='", 
			"'=='", "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "Whitespace", "SLComment", "MLComment", "Var", "Let", "End", 
			"If", "Else", "While", "Fn", "Continue", "Break", "Defer", "Type", "Struct", 
			"Template", "New", "Return", "For", "Mod", "Use", "Auto", "And", "Not", 
			"Or", "True", "False", "Uninit", "As", "Identifier", "Integer", "Float", 
			"String", "Plus", "Minus", "Star", "Slash", "Ampersand", "Equal", "CompEqual", 
			"OpenParen", "CloseParen", "OpenBrace", "CloseBrace", "OpenIndex", "CloseIndex"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4424764620800L) != 0)) {
				{
				{
				setState(68);
				topLevelStatement();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelStatementContext extends ParserRuleContext {
		public FnDefineContext fnDefine() {
			return getRuleContext(FnDefineContext.class,0);
		}
		public StructDefineContext structDefine() {
			return getRuleContext(StructDefineContext.class,0);
		}
		public AliasDefineContext aliasDefine() {
			return getRuleContext(AliasDefineContext.class,0);
		}
		public LetStmtContext letStmt() {
			return getRuleContext(LetStmtContext.class,0);
		}
		public ModStatementContext modStatement() {
			return getRuleContext(ModStatementContext.class,0);
		}
		public AsStatementContext asStatement() {
			return getRuleContext(AsStatementContext.class,0);
		}
		public UseStatementContext useStatement() {
			return getRuleContext(UseStatementContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatement);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				fnDefine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				structDefine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				aliasDefine();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				letStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				modStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				asStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(80);
				useStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsStatementContext extends ParserRuleContext {
		public List<TerminalNode> As() { return getTokens(ReCParser.As); }
		public TerminalNode As(int i) {
			return getToken(ReCParser.As, i);
		}
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public TerminalNode End() { return getToken(ReCParser.End, 0); }
		public List<TerminalNode> Identifier() { return getTokens(ReCParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(ReCParser.Identifier, i);
		}
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public AsStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asStatement; }
	}

	public final AsStatementContext asStatement() throws RecognitionException {
		AsStatementContext _localctx = new AsStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(As);
			setState(84);
			typename();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(85);
				match(Identifier);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4424764620800L) != 0)) {
				{
				{
				setState(91);
				topLevelStatement();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(End);
			setState(98);
			match(As);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModStatementContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> parts = new ArrayList<Token>();
		public List<TerminalNode> Mod() { return getTokens(ReCParser.Mod); }
		public TerminalNode Mod(int i) {
			return getToken(ReCParser.Mod, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(ReCParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(ReCParser.Identifier, i);
		}
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public TerminalNode End() { return getToken(ReCParser.End, 0); }
		public ModStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modStatement; }
	}

	public final ModStatementContext modStatement() throws RecognitionException {
		ModStatementContext _localctx = new ModStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_modStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(Mod);
			{
			setState(101);
			((ModStatementContext)_localctx).Identifier = match(Identifier);
			((ModStatementContext)_localctx).parts.add(((ModStatementContext)_localctx).Identifier);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(102);
				match(T__0);
				setState(103);
				((ModStatementContext)_localctx).Identifier = match(Identifier);
				((ModStatementContext)_localctx).parts.add(((ModStatementContext)_localctx).Identifier);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(109);
					topLevelStatement();
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(115);
				match(End);
				setState(116);
				match(Mod);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseStatementContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> parts = new ArrayList<Token>();
		public TerminalNode Use() { return getToken(ReCParser.Use, 0); }
		public List<TerminalNode> Identifier() { return getTokens(ReCParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(ReCParser.Identifier, i);
		}
		public UseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useStatement; }
	}

	public final UseStatementContext useStatement() throws RecognitionException {
		UseStatementContext _localctx = new UseStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_useStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(Use);
			{
			setState(120);
			((UseStatementContext)_localctx).Identifier = match(Identifier);
			((UseStatementContext)_localctx).parts.add(((UseStatementContext)_localctx).Identifier);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(121);
				match(T__0);
				setState(122);
				((UseStatementContext)_localctx).Identifier = match(Identifier);
				((UseStatementContext)_localctx).parts.add(((UseStatementContext)_localctx).Identifier);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateHeaderContext extends ParserRuleContext {
		public Token Identifier;
		public List<Token> args = new ArrayList<Token>();
		public TerminalNode Template() { return getToken(ReCParser.Template, 0); }
		public List<TerminalNode> Identifier() { return getTokens(ReCParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(ReCParser.Identifier, i);
		}
		public TemplateHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateHeader; }
	}

	public final TemplateHeaderContext templateHeader() throws RecognitionException {
		TemplateHeaderContext _localctx = new TemplateHeaderContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_templateHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(Template);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				((TemplateHeaderContext)_localctx).Identifier = match(Identifier);
				((TemplateHeaderContext)_localctx).args.add(((TemplateHeaderContext)_localctx).Identifier);
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructFieldDefineContext extends ParserRuleContext {
		public Token name;
		public TypenameContext type;
		public TerminalNode Identifier() { return getToken(ReCParser.Identifier, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public StructFieldDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structFieldDefine; }
	}

	public final StructFieldDefineContext structFieldDefine() throws RecognitionException {
		StructFieldDefineContext _localctx = new StructFieldDefineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_structFieldDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			((StructFieldDefineContext)_localctx).name = match(Identifier);
			setState(135);
			((StructFieldDefineContext)_localctx).type = typename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructDefineContext extends ParserRuleContext {
		public Token name;
		public StructFieldDefineContext structFieldDefine;
		public List<StructFieldDefineContext> fields = new ArrayList<StructFieldDefineContext>();
		public TerminalNode Struct() { return getToken(ReCParser.Struct, 0); }
		public TerminalNode OpenBrace() { return getToken(ReCParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(ReCParser.CloseBrace, 0); }
		public TerminalNode Identifier() { return getToken(ReCParser.Identifier, 0); }
		public TemplateHeaderContext templateHeader() {
			return getRuleContext(TemplateHeaderContext.class,0);
		}
		public List<StructFieldDefineContext> structFieldDefine() {
			return getRuleContexts(StructFieldDefineContext.class);
		}
		public StructFieldDefineContext structFieldDefine(int i) {
			return getRuleContext(StructFieldDefineContext.class,i);
		}
		public StructDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDefine; }
	}

	public final StructDefineContext structDefine() throws RecognitionException {
		StructDefineContext _localctx = new StructDefineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structDefine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Template) {
				{
				setState(137);
				templateHeader();
				}
			}

			setState(140);
			match(Struct);
			setState(141);
			((StructDefineContext)_localctx).name = match(Identifier);
			setState(142);
			match(OpenBrace);
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(143);
					((StructDefineContext)_localctx).structFieldDefine = structFieldDefine();
					((StructDefineContext)_localctx).fields.add(((StructDefineContext)_localctx).structFieldDefine);
					setState(144);
					match(T__1);
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(151);
				((StructDefineContext)_localctx).structFieldDefine = structFieldDefine();
				((StructDefineContext)_localctx).fields.add(((StructDefineContext)_localctx).structFieldDefine);
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(152);
					match(T__1);
					}
				}

				}
			}

			setState(157);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FnArgumentDefineContext extends ParserRuleContext {
		public Token auto;
		public TerminalNode Identifier() { return getToken(ReCParser.Identifier, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public TerminalNode Auto() { return getToken(ReCParser.Auto, 0); }
		public FnArgumentDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnArgumentDefine; }
	}

	public final FnArgumentDefineContext fnArgumentDefine() throws RecognitionException {
		FnArgumentDefineContext _localctx = new FnArgumentDefineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fnArgumentDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Auto) {
				{
				setState(159);
				((FnArgumentDefineContext)_localctx).auto = match(Auto);
				}
			}

			setState(162);
			match(Identifier);
			setState(163);
			typename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FnDefineContext extends ParserRuleContext {
		public Token name;
		public FnArgumentDefineContext fnArgumentDefine;
		public List<FnArgumentDefineContext> args = new ArrayList<FnArgumentDefineContext>();
		public TypenameContext ret;
		public TerminalNode Fn() { return getToken(ReCParser.Fn, 0); }
		public TerminalNode OpenParen() { return getToken(ReCParser.OpenParen, 0); }
		public TerminalNode CloseParen() { return getToken(ReCParser.CloseParen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(ReCParser.Identifier, 0); }
		public TemplateHeaderContext templateHeader() {
			return getRuleContext(TemplateHeaderContext.class,0);
		}
		public List<FnArgumentDefineContext> fnArgumentDefine() {
			return getRuleContexts(FnArgumentDefineContext.class);
		}
		public FnArgumentDefineContext fnArgumentDefine(int i) {
			return getRuleContext(FnArgumentDefineContext.class,i);
		}
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public FnDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnDefine; }
	}

	public final FnDefineContext fnDefine() throws RecognitionException {
		FnDefineContext _localctx = new FnDefineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fnDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Template) {
				{
				setState(165);
				templateHeader();
				}
			}

			setState(168);
			match(Fn);
			setState(169);
			((FnDefineContext)_localctx).name = match(Identifier);
			setState(170);
			match(OpenParen);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Auto || _la==Identifier) {
				{
				setState(171);
				((FnDefineContext)_localctx).fnArgumentDefine = fnArgumentDefine();
				((FnDefineContext)_localctx).args.add(((FnDefineContext)_localctx).fnArgumentDefine);
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(172);
					match(T__1);
					setState(173);
					((FnDefineContext)_localctx).fnArgumentDefine = fnArgumentDefine();
					((FnDefineContext)_localctx).args.add(((FnDefineContext)_localctx).fnArgumentDefine);
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(181);
			match(CloseParen);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 306816520716025856L) != 0)) {
				{
				setState(182);
				((FnDefineContext)_localctx).ret = typename();
				}
			}

			setState(185);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasDefineContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Type() { return getToken(ReCParser.Type, 0); }
		public TerminalNode Equal() { return getToken(ReCParser.Equal, 0); }
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(ReCParser.Identifier, 0); }
		public AliasDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasDefine; }
	}

	public final AliasDefineContext aliasDefine() throws RecognitionException {
		AliasDefineContext _localctx = new AliasDefineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_aliasDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(Type);
			setState(188);
			((AliasDefineContext)_localctx).name = match(Identifier);
			setState(189);
			match(Equal);
			setState(190);
			typename();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement;
		public List<StatementContext> stmts = new ArrayList<StatementContext>();
		public TerminalNode OpenBrace() { return getToken(ReCParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(ReCParser.CloseBrace, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}
